--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/SystemInfo.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/SystemInfo.cshtml
@@ -3,6 +3,25 @@
 }
 <div>
     <h1>@ViewData["Title"]</h1>
+
+    <form asp-action="Create_Sys" enctype="multipart/form-data" asp-controller="Home">
+
+    <div style="margin-bottom: 50px;margin-top: 50px">
+     <label>Systemname</label>
+    <input name="KeyName" id="NameSys" type="text" class="form-control" />
+    </div>
+
+    <div style="margin-bottom: 50px;">
+    <label>Schlüsselkosten</label>
+    <input name="KeyCost" type="number" step="0,1" min="0" class="form-control" />
+    </div>
+    <button>System erstellen</button>
+    </form>
+
+    <br />
+    <hr />
+    <br/>
+
     @using (Html.BeginForm("EditSystem", "Home", FormMethod.Get))
     {
         <table class="table table-bordered table-sm">
@@ -13,6 +32,7 @@
                     <th>Lieferzeit</th>
                     <th>LieferzeitGrosse</th>
                     <th>Bearbeiten</th>
+                    <th>Löschen</th>
                     @foreach (var item in ViewBag.item)
                     {
                         <td id="rowTable " class="table-info"><h6 >@item.NameSysteam</h6></td>
@@ -20,6 +40,7 @@
                         <td id="rowTable " class="table-info"><h6 >@item.Lieferzeit</h6></td>
                         <td id="rowTable " class="table-info"><h6>@item.LieferzeitGrosse</h6></td>
                         <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_System","Home", new { id = item.Id })"><img src="@("/image/edit-tools.png")" height="30" width="30" /></a></td>
+                        <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_System","Home", new { item.Id })"><img src="@("/image/entfernen.png")" height="30" width="30" /></a></td>
                     }
                 </tr>
             </tbody>
