--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -42,7 +42,7 @@
                 <div  class="TexCount">
                         <input type="text" required readonly style="position: relative;background:none;border:none;text-align: center; " name="FurNameKey" value="1" />
                     <div id="TexInputKey">
-                       <input id="inputS" required name="NameKey"  onchange="chekedNameArienKey(event.target.value,1)" placeholder="Name des Schlüssels" type="text" />
+                            <input id="inputS" required name="NameKey" value="Schlüssel 1" onchange="chekedNameArienKey(event.target.value,1)" placeholder="Name des Schlüssels" type="text" />
                     </div>
                     <div>
                        <input id="inputCount" required name="CountKey" value="1" type="text" />
@@ -84,7 +84,7 @@
                                         <h6 id="counterTur"><img src="@("/Image/options.png")" onmouseover="controlPannel(1)" height="20" width="20" style="margin-right: 10px;" />1</h6>
                                 </div>
                                      <div>
-                                        <input id="inputTur" required name="Turname" onchange="chekedNameArientiren(event.target.value,1)" placeholder="Name der Tür" />
+                                        <input id="inputTur" required name="Turname" value="Tür 1" onchange="chekedNameArientiren(event.target.value,1)" placeholder="Name der Tür" />
                                       </div>
                             </div>
                                     <div>
@@ -969,7 +969,7 @@
                                         </div>
 
                                         <div>
-                                                  <input id="inputTur" required  onchange="chekedNameArientiren(event.target.value,${blockTur})" name="Turname" placeholder="Name der Tür" />
+                                                              <input id="inputTur" required  onchange="chekedNameArientiren(event.target.value,${blockTur})" name="Turname" value="Tür ${blockTur}" placeholder="Name der Tür" />
                                         </div>
 
                                             <div>
@@ -1106,7 +1106,7 @@
                                <div  class="TexCount">
                                      <input type="text" readonly required  name="FurNameKey" style="position: relative;background:none;border:none;text-align: center;" value="${blockCount}" />
                             <div id="TexInputKey">
-                                    <input id="inputS" required name="NameKey" onchange="chekedNameArienKey(event.target.value,${blockCount})" placeholder="Name des Schlüssels" type="text" />
+                                                <input id="inputS" required name="NameKey" onchange="chekedNameArienKey(event.target.value,${blockCount})" value="Schlüssel ${blockCount}" placeholder="Name des Schlüssels" type="text" />
                             </div>
                             <div>
                                          <input id="inputCount" required name="CountKey" value="1" type="text" />
@@ -1162,7 +1162,7 @@
                                    <div  class="TexCount">
                                          <input type="text" required  name="FurNameKey" style="position: relative;background:none;border:none;text-align: center;" value="${blockCount}" />
                                 <div id="TexInputKey">
-                                        <input id="inputS" required name="NameKey" onchange="chekedNameArienKey(event.target.value,${blockCount})" placeholder="Name des Schlüssels" type="text" />
+                                                <input id="inputS" required name="NameKey" onchange="chekedNameArienKey(event.target.value,${blockCount})" value="Schlüssel ${blockCount}" placeholder="Name des Schlüssels" type="text" />
                                 </div>
                                 <div>
                                    <input id="inputCount" required name="CountKey" value="1" type="text" />
@@ -1231,7 +1231,7 @@
                                             </div>
 
                                             <div>
-                                                      <input id="inputTur" required  onchange="chekedNameArientiren(event.target.value,${blockTur})" name="Turname" placeholder="Name der Tür" />
+                                                                  <input id="inputTur" required  onchange="chekedNameArientiren(event.target.value,${blockTur})" value="Tür ${blockTur}" name="Turname" placeholder="Name der Tür" />
                                             </div>
 
                                                 <div>
