--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/SendRehnung.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/SendRehnung.cshtml
@@ -4,315 +4,64 @@
 
 <div id="RehnungPdf" style="padding: 5px;background: white;max-width: 794px !important;">
 
-    <div>
-        <img src=" @("/Image/SD_Logo.svg")" width="auto" height="60" />
-
-        <p style="margin-top:10px">
-            OWSD Werbe-und Sicherheitsshop GmbH <br/>
-            Brunnenstraße 8 <br />
-            10119 Berlin <br />
-        </p>
-    </div>
-   
-    <div style="display:flex;gap:320px;margin-top: 10px;">
-        <div>
-            <p><strong>Rechnungsadresse</strong></p>
-            <p id="Rechnungsadresse"></p>
-        </div>
-        <div>
-            <p><strong>Lieferadresse</strong></p>
-            <p id="Lieferadresse"></p>
-        </div>
-    </div>
-    <div style="margin-top: 20px;">
-        <h3 style="font-size: 12px;margin: 0px;"><strong>Rechnung</strong></h3>
-        <hr style="margin: 2px;" />
-        
-        <div style="display:flex;gap: 120px;">
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">Rechnungsnummer</h6>
-            </div>
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">1</h6>
-            </div>
-        </div>
-        <hr style="margin: 2px; "/>
-
-        <div style="display:flex;gap: 140px;">
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">Bestellnummer</h6>
-            </div>
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">1</h6>
-            </div>
-        </div>
-
-        <hr style="margin: 2px; " />
-
-        <div style="display:flex;gap: 145px;">
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">Bestelldatum</h6>
-            </div>
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;"> @DateTime.Now.Date.ToString("dd.MM.yyyy")</h6>
-            </div>
-        </div>
-
-        <hr style="margin: 2px; " />
-
-        <div style="display:flex;gap: 150px;">
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">Zahlungsart</h6>
-            </div>
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;" id="Zahlungsart"></h6>
-            </div>
-        </div>
-        <hr style="margin: 2px; " />
-
-        <div style="display:flex;gap: 175px;">
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">E-Mail</h6>
-            </div>
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;" id="Email"></h6>
-            </div>
-        </div>
-     
-        <hr style="margin: 2px; " />
-    </div>
-    <div>
-        <div style="display:grid;grid-template-columns:300px 100px 100px 100px;margin-top: 50px;">
-            <h6 style="font-size: 10px;margin: 0px;">Produkt</h6>
-            <h6 style="font-size: 10px;margin: 0px;">Preis</h6>
-            <h6 style="font-size: 10px;margin: 0px;">Menge</h6>
-            <h6 style="font-size: 10px;margin: 0px;">Summe</h6>
-        </div>
-        <hr style="margin: 2px; " />
-
-        <div style="display:grid;grid-template-columns:300px 100px 100px 100px">
-
-            @foreach (var list in ViewBag.Product)
-            {
-                @foreach (var listItem in ViewBag.ProductItem)
-                {
-                    <div>
-                        <h6 style="font-size: 10px;margin: 0px;"><strong>@list.ProductName</strong></h6>
-                        <h6 style="font-size: 10px;margin: 0px;">@listItem.Name</h6>
-                        <h6 style="font-size: 10px;margin: 0px;"><strong>Zylinderlänge A (Außenlänge):</strong> @listItem.Aussen</h6>
-                        <h6 style="font-size: 10px;margin: 0px;"><strong>Zylinderlänge B (Innenlänge):</strong>@listItem.Intern</h6>
-                        <h6 style="font-size: 10px;margin: 0px;"><strong>@listItem.Option</strong></h6>
-                    </div>
-                    <div>
-                        
-                    </div>
-                    <div>
-                        <h6 style="font-size: 10px;margin: 0px;">@listItem.Count</h6>
-                    </div>
-                    <div>
-                        
-                    </div>
-                }
-            }
-          
-        </div>
-
-        <hr style="margin: 2px; " />
-
-        <div style="display:flex">
-
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;"><strong>Zwischensumme</strong></h6>
-                
-            </div>
-            <div style="margin-left: 410px;">
-                <h6 style="font-size: 10px;margin: 0px;" id="Summ"></h6>
-               
-            </div>
-        </div>
-
-        <hr style="margin: 2px; " />
-
-        <div style="display:flex">
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">Lieferung</h6>
-            </div>
-            <div style="margin-left: 450px;">
-                <h6 style="font-size: 10px;margin: 0px;" id="SendCostet">Lieferung</h6>
-            </div>
-        </div>
-
-        <hr style="margin: 2px; " />
-
-        <div style="display:flex">
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">Steuer</h6>
-            </div>
-            <div style="margin-left: 460px;">
-                <h6 style="font-size: 10px;margin: 0px;" id="Steue"></h6>
-            </div>
-        </div>
-
-        <hr style="margin: 2px; " />
-
-        <div style="display:flex">
-            <div>
-                <h6 style="font-size: 10px;margin: 0px;">Gesamt</h6>
-            </div>
-            <div style="margin-left: 460px;">
-                <h6 style="font-size: 10px;margin: 0px;" id="AllSum"> </h6>
-            </div>
-        </div>
-        <hr style="height: 5px; margin: 2px; " />
-    </div>
-    <div>
-        <p style="margin-left: 360px;padding: 20px 20px;text-align: left; font-size: 7px;">
-
-            <strong>Zahlungsziel</strong>:sofort fälligohne Abzug <br />
-            Sofern Sie diese Rechnung noch nicht beglichen haben, muss diese <br />
-            innerhalb von 7 Tagen perangegebenerZahlungsart bezahlt werden. <br />
-            BeimÜberweisen bitte immerdie Rechnungsnummerangeben. <br />
-        </p>
-        <p style="font-size: 7px;">
-            Es gelten unsere AGB. Die Ware bleibt bis zur restlosen Bezahlung unser Eigentum. Sofern nicht anderes angegeben, entspricht das Lieferdatum dem <br />
-            Rechnungsdatum.
-        </p>
-
-        <hr />
-    </div>
-    <div style="display:grid;grid-template-columns:250px 250px 250px">
-        
-        <div>
-            <p style="font-size: 7px;">
-                <strong>OWSD Werbe- und</strong>  <br />
-                <strong>Sicherheitsshop GmbH</strong> <br />
-                Brunnenstr. 8, 10119 Berlin <br />
-                <strong>Tel</strong>.:+49 30 4508 7619 <br />
-                <strong>Fax</strong>:+49 30 4508 7629 <br />
-                <strong>E-mail</strong>:info@schluessel.discount <br />
-           </p>     
-        </div>
-        <div>
-            <p style="font-size: 7px;">
-                <strong>HReg</strong>:AG Charlottenburg Berlin <br />
-                HRB 202933B <br />
-                <strong>StNr</strong>:30/463/50215 <br />
-                <strong>USt-ID</strong>:DE322169544 <br />
-        </p>
-        </div>
-        <div>
-            <p style="font-size: 7px;">
-                <strong>PayPal-Konto</strong>:pay@owsd.de <br />
-                <strong>Bankverbindung</strong>:Commerzbank AG <br />
-                <strong>IBAN</strong>:DE62 1004 0048 0382 2749 00 <br />
-                <strong>BIC</strong>:COBADEFFXXX <br />
-            </p>
-        </div>
-    </div>
+    <button onclick="generatePDF()">Скачать PDF</button>
 </div>
 <a href="@Url.Action("HistorOrders", "Konfigurator", new{userKey =  @ViewBag.Key})" role="button" class="btn btn-info">Weiter</a>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
 <script>
 
     let Info = @Html.Raw(ViewBag.Info);
 
+    let meinAdress = `OWSD Werbe-und Sicherheitsshop GmbH
+    Brunnenstraße 8
+    10119 Berlin`;
 
-
-    let Versand = parseFloat(Info.Versand.replace("€", "").trim());
-    let SumALL = parseFloat(Info.OrderSum.replace("€", "").trim());
-
-
-    let Zwischesumme = SumALL - Versand;
-
-    let Summ = document.getElementById("Summ");
-
-    Summ.textContent = Zwischesumme.toLocaleString('de-DE', {
-        style: 'currency',
-        currency: 'EUR'
-    });
-
-    console.log(Info);
-
-
-    let AllSum = document.getElementById("AllSum");
-
-    AllSum.textContent = Info.OrderSum;
-
-    let SendCostet = document.getElementById("SendCostet");
-    SendCostet.textContent = Info.Versand;
-
-    let Steue = document.getElementById("Steue");
-    Steue.textContent = Info.Steuer;
-
-    let Rechnungsadresse = document.getElementById("Rechnungsadresse");
-    Rechnungsadresse.innerHTML = `${Info.SendVorname + " " + Info.SendNachname} <br>
-    ${Info.SendStrasse} ${Info.SemdAdressZusatz},<br>
-    ${Info.SendZip} ${Info.SendStadt} , ${Info.SendLand} `;
-
-    let Lieferadresse = document.getElementById("Lieferadresse");
-
-    let Email = document.getElementById("Email");
-
-    let Zahlungsart = document.getElementById("Zahlungsart");
-
-    Zahlungsart.textContent = Info.Pay;
-
-    if (Info.Rehnung == "on") 
-    {
-        Lieferadresse.innerHTML = `${Info.SendVorname + " " + Info.SendNachname} <br>
-        ${Info.SendStrasse} ${Info.SemdAdressZusatz},<br>
+    let Rechnungsadresse = `${Info.SendVorname + " " + Info.SendNachname} 
+        ${Info.SendStrasse} ${Info.SemdAdressZusatz},
         ${Info.SendZip} ${Info.SendStadt} , ${Info.SendLand} `;
 
-        Email.textContent = Info.SendAdresse;
+    let Lieferadresse = "";
+    if (Info.Rehnung == "on") 
+    {
+        Lieferadresse = `${Info.SendVorname + " " + Info.SendNachname} 
+            ${Info.SendStrasse} ${Info.SemdAdressZusatz},
+            ${Info.SendZip} ${Info.SendStadt} , ${Info.SendLand} `;
     }
     else {
-        Lieferadresse.innerHTML = `${Info.RechnungVorname + " " + Info.RechnungNachname} <br>
-        ${Info.RechnungStrasse} ${Info.RechnungAdressZusatz},<br>
-        ${Info.RechnungZip} ${Info.RechnungSendStadt} , ${Info.RechnungLand} `;
-
-        Email.textContent = Info.RechnungAdresse;
+        Lieferadresse = `${Info.RechnungVorname + " " + Info.RechnungNachname} 
+            ${Info.RechnungStrasse} ${Info.RechnungAdressZusatz},
+            ${Info.RechnungZip} ${Info.RechnungSendStadt} , ${Info.RechnungLand} `;
     }
 
-    let element2 = document.getElementById('RehnungPdf');
-    html2pdf(element2, {
-        margin: 1,
-        filename: 'Rehnung.pdf',
-        image: { type: 'jpeg', quality: 0.98 },
-        html2canvas: { scale: 2 },
-        jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
-    });
+    function generatePDF() {
+        const docDefinition = {
+            header: function (currentPage, pageCount) {
+                return {
+                    text: `Header - Page ${currentPage} of ${pageCount}`,
+                    alignment: 'center',
+                    margin: [0, 10]
+                };
+            },
+            footer: function (currentPage, pageCount) {
+                return {
+                    text: `Footer - Page ${currentPage} of ${pageCount}`,
+                    alignment: 'center',
+                    margin: [0, 10]
+                };
+            },
+            content: [
+                { text: 'Main content of the document', margin: [0, 20] },
+                { text: 'More content that will be automatically split into multiple pages if necessary...', margin: [0, 20] },
+                { text: 'More text to demonstrate automatic page breaking...', margin: [0, 20] },
+            ],
+            pageSize: 'A4',
+            pageMargins: [40, 60, 40, 60] // Margins: [left, top, right, bottom]
+        };
 
-    function generateAndSendPdf() 
-    {
-        let element = document.getElementById('RehnungPdf');
-        html2pdf(element, {
-            margin: 1,
-            filename: 'Rehnung.pdf',
-            image: { type: 'jpeg', quality: 0.98 },
-            html2canvas: { scale: 2 },
-            jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' }
-        }).then(function (pdf) {
-            var formData = new FormData();
-            formData.append('file', pdf.output('blob'), 'Rehnung.pdf');
-
-            fetch('/Konfigurator/UploadPdf', {
-                method: 'POST',
-                body: formData
-            })
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {
-                        alert('Файл успешно загружен!');
-                    } else {
-                        alert('Ошибка при загрузке файла.');
-                    }
-                })
-                .catch(error => {
-                    console.error('Ошибка:', error);
-                });
-        });
+        pdfMake.createPdf(docDefinition).open();
     }
 
-    document.getElementById('generatePdfButton').addEventListener('click', generateAndSendPdf);
+  
 </script>
